# chat-customer

./: .env.example  .gitignore  AGENTS.md  AI_RULES.md  CONTRIBUTING.md  DOCUMENTATION_UPDATES.md  PROJECT_PLAN.md  README.md  ROADMAP.md  demo_vector_repository_call.py  main.py  pyproject.toml  requirements.txt  schema.sql
app/: dependencies.py  main.py
app/agent/: __init__.py  executor.py
app/api/: auth.py  chat.py  conversation.py  customer.py  customer_auth.py  customer_chat.py  errors.py  knowledge_base.py  llm_log.py  manager.py  message.py  session.py  upload.py
app/core/: config.py  response.py
app/db/: base.py  session.py
app/llm/: OpenAI.py  openai_client.py
app/models/: __init__.py  customer.py
app/rag/: embedding.py  ingestion.py  parser.py  prompt.py  selection.py  splitter.py  text_utils.py
app/repositories/: context_repository.py  conversation_bus.py  mysql_mappers.py  mysql_records.py  mysql_repository.py  vector_repository.py
app/schemas/: auth.py  chat.py  conversation.py  (+8 more)
tests/: test_agent_executor.py  test_auth_service.py  test_chat_service.py  test_chat_stream.py  test_conversation_flow.py  test_conversation_service_permission.py  test_conversation_service_transfer.py  test_customer_auth_service.py  test_customer_service.py  test_order_tool.py  test_product_tool.py  test_selection.py  test_vector_repository_fallback.py
web/: .env.development  .env.production  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.mts
widget/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+90 files in other folders)
